force-app/main/default/objects/Training__c/fields/BatchDuration__c.field-meta.xml
<CustomField>
    <fullName>BatchDuration__c</fullName>
    <label>BatchDuration</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>