force-app/main/default/objects/Training__c/fields/ProjectStartDate__c.field-meta.xml
<CustomField>
    <fullName>ProjectStartDate__c</fullName>
    <inlineHelpText>If no Project Start Date is entered when creating a Training object, this field will default to three weeks before the end date of the training.</inlineHelpText>
    <label>ProjectStartDate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>