force-app/main/default/objects/Training__c/validationRules/Hexadecimal_colors_only.validationRule-meta.xml
<ValidationRule>
    <fullName>Hexadecimal_colors_only</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( Color__c , &quot;^#([A-Fa-f0-9]{6}|[A-Fa-f0-9]{3})$&quot;))</errorConditionFormula>
    <errorDisplayField>Color__c</errorDisplayField>
    <errorMessage>Not a valid hexadecimal color</errorMessage>
</ValidationRule>