force-app/main/default/objects/Training__c/validationrules/Must_have_project_assignment.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_have_project_assignment</fullName>
    <active>true</active>
    <errorConditionFormula>OR( ISNULL( Project__c ) , ISNULL( Project__r.Id ) )</errorConditionFormula>
    <errorDisplayField>Project__c</errorDisplayField>
    <errorMessage>Must have a valid project</errorMessage>
</ValidationRule>