force-app/main/default/objects/Training__c/validationrules/Must_have_project_start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_have_project_start_date</fullName>
    <active>true</active>
    <description>A project start date must be set for reporting functionality</description>
    <errorConditionFormula>ISNULL( ProjectStartDate__c )</errorConditionFormula>
    <errorDisplayField>ProjectStartDate__c</errorDisplayField>
    <errorMessage>Must set a project start date</errorMessage>
</ValidationRule>