force-app/main/default/objects/Training__c/validationrules/Must_have_room_assignment.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_have_room_assignment</fullName>
    <active>true</active>
    <description>A room must be assigned for reporting functionality</description>
    <errorConditionFormula>OR( ISNULL(  Room__c  ) ,  ISNULL(  Room__r.Id  ) )</errorConditionFormula>
    <errorDisplayField>Room__c</errorDisplayField>
    <errorMessage>A valid room is required</errorMessage>
</ValidationRule>